feat: Provider 추가 및 nextUI, 다크모드 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,9 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #333;
-    --foreground: #ededed;
-  }
+.dark:root {
+  --background: #333;
+  --foreground: #ededed;
 }
 
 body {
